# vanna-financial-knowledge-graph

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  pyproject.toml  test_dedup_manual.py  test_extraction_proper_nouns.py
docs/: ADDITIONAL_CONSIDERATIONS.md  DEVELOPER_GUIDE.md  DEVELOPMENT_PLAN.md
docs/archive/plans/: 2026-01-29-build-kg-script-design.md  2026-01-29-entity-dedup-design.md  2026-01-29-entity-dedup-implementation.md  2026-01-29-entity-registry-assembler-design.md  2026-01-29-entity-registry-assembler-impl.md  2026-01-29-topic-resolver-design.md  2026-01-29-topic-resolver-impl.md  2026-01-30-knowledgegraph-cli-design.md  2026-01-30-knowledgegraph-cli-implementation.md  2026-01-30-relationship-refactor.md  2026-01-31-bidirectional-to-flag.md  2026-01-31-entity-definition-field.md  2026-02-01-agent-task-tickets.md  2026-02-01-system-stabilization-roadmap.md  (+6 more)
docs/plans/: 2026-01-29-build-kg-script-design.md  2026-01-29-markdown-chunker-design.md  2026-01-30-knowledgegraph-cli-implementation.md  2026-01-30-relationship-refactor.md  2026-02-01-system-stabilization-roadmap.md  2026-02-02-followup-ticket-index.md  2026-02-02-ticket-h-mcp-query-contract-realignment.md  2026-02-02-ticket-i-mcp-find-structured-name-definition-contract.md  README.md
scripts/: build_kg.py  debug_query.py
tests/: __init__.py  test_assembler.py  test_cost_telemetry.py  test_entity_dedup.py  test_entity_registry.py  test_knowledge_graph.py  test_mcp_server.py  test_parquet_append_scalability.py  test_query_pipeline.py  test_topic_resolver.py  test_types.py
vanna_kg/: README.md  __init__.py
vanna_kg/_compat/: __init__.py  legacy.py
vanna_kg/api/: __init__.py  convenience.py  knowledge_graph.py  shell.py
vanna_kg/cli/: __init__.py  __main__.py
vanna_kg/config/: __init__.py  pricing.py  providers.py  settings.py
vanna_kg/ingestion/: __init__.py
vanna_kg/mcp/: __init__.py  __main__.py  server.py
vanna_kg/providers/: __init__.py  base.py
vanna_kg/query/: README.md  __init__.py  context_builder.py  decomposer.py  pipeline.py  researcher.py  synthesizer.py
vanna_kg/shell/: __init__.py
vanna_kg/skills/: query_strategies.md
vanna_kg/storage/: README.md  __init__.py  base.py
vanna_kg/types/: __init__.py  chunks.py  entities.py  facts.py  results.py
vanna_kg/utils/: __init__.py  clustering.py  cost_telemetry.py  embedding_text.py  token_count.py
zomma_kg/: README.md  __init__.py
zomma_kg/_compat/: __init__.py  legacy.py
zomma_kg/api/: __init__.py  convenience.py  knowledge_graph.py  shell.py
zomma_kg/cli/: __init__.py  __main__.py
zomma_kg/config/: __init__.py  defaults.py  settings.py
zomma_kg/ingestion/: __init__.py
zomma_kg/mcp/: __init__.py  __main__.py  server.py
zomma_kg/providers/: __init__.py
zomma_kg/query/: __init__.py  context_builder.py  decomposer.py  pipeline.py  researcher.py  synthesizer.py  types.py
zomma_kg/shell/: README.md
zomma_kg/skills/: query_strategies.md
zomma_kg/storage/: README.md  __init__.py  base.py
zomma_kg/types/: __init__.py  facts.py  results.py  topics.py
zomma_kg/utils/: __init__.py  clustering.py  text.py
(+55 files in other folders)
